# cpp-scotffold

./: README.md  test.excalidraw
Code/gflags/: main.conf  makefile
Code/gtest/: main  main.cc  makefile
Code/source/: log.cpp  main.cpp  makefile
Code/spdlog/: makefile
example/brpc/: async_client.cc  caculate.pb.cc  caculate.pb.h  caculate.proto  client.cc  main.cc  makefile
example/ffmpeg/: dst0.ts  dst1.ts  dst10.ts  dst11.ts  dst12.ts  dst13.ts  dst14.ts  dst15.ts  dst16.ts  dst17.ts  dst18.ts  dst19.ts  dst2.ts  dst20.ts  dst21.ts  dst22.ts  dst23.ts  dst24.ts  dst25.ts  dst26.ts  dst27.ts  dst28.ts  dst29.ts  dst3.ts  dst30.ts  dst4.ts  dst5.ts  dst6.ts  dst7.ts  dst8.ts  dst9.ts  hls2  makefile  note.tldr  test_ffmpeg.cc  tmp.m3u8
example/gflags/: main  main.cc
example/gtest/: main.cc
example/httplib/: Client.cc  server  (+1 more)
source/: caculate.proto  command.h  dst.m3u8  json.cpp  json.h  log.h  main.cpp  makefile  rigistry.cpp  rigistry.h
test/ffmpeg/: CMakeLists.txt
test/ffmpeg/include/: command.h
test/ffmpeg/src/src/: test.cpp
test/ffmpeg/vedio/: dst.bak.m3u8  dst0.ts  dst1.ts  dst10.ts  dst11.ts  dst12.ts  dst13.ts  dst14.ts  dst15.ts  dst2.ts  dst3.ts  dst4.ts  dst5.ts  dst6.ts  dst7.ts  dst8.ts  dst9.ts
test/rpc/: CMakeLists.txt  readme.excalidraw  test.proto
test/rpc/include/: Buffer.h  Server.h  command.h  concrete_events.h  epoll_dispatcher.h  epoll_event.h  reactor.h  test.pb.h
test/rpc/src/: Buffer.cpp  Server.cpp  command.cpp  concrete_events.cpp  epoll_dispatcher.cpp  epoll_event.cpp  log.cpp  main.cpp  reactor.cpp  test.pb.cc
(+38 files in other folders)
